--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='UTF-8' />
-    <title>meme</title>
+    <title>memo</title>
     <link rel="stylesheet" href="/style.css" type='text/css'>
     <link href='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css' rel='stylesheet' />
   </head>
