--- a/views/new.erb
+++ b/views/new.erb
@@ -3,8 +3,8 @@
 
 <form action='/memos' method='post'>
     <label for="fname">タイトル:</label>
-    <input type="text" id="title" name="title"><br><br>
+    <input type="text" required id="title" name="title"><br><br>
     <label for="lname">コンテント:</label>
-    <input type="text" id="content" name="content"><br><br>
+    <input type="text" required id="content" name="content"><br><br>
     <button type='submit'>登録</button>
 </form>
